style: fix border-bottom radius on mobile devices

--- a/css/_index.scss
+++ b/css/_index.scss
@@ -293,6 +293,7 @@ body {
                             font-size: 24px;
                             font-weight: 600;
                             text-align: right; 
+                            border-radius: 0;
                             border: 0px;
                             border-bottom: solid 3px;
                             width: 45px;
